@@ -4,6 +4,8 @@ Revision history for Perl module URI::Title
   - Added separate COPYRIGHT AND LICENSE section to pod
   - Specified min version of perl as 5.006
   - Misc tidy-ups in Makefile.PL
+  - Added WWW::GetPageTitle to SEE ALSO. More for completeness than any belief
+    that anyone might want to use that over URI::Title.
 
 1.89 2014-09-12 Philippe Bruhat (BooK) <book@cpan.org>
   - Closed RT #55235 (thanks to James Green (JKG))
